src/objects/Sign_Up__c.object
<CustomObject>
    <fields>
        <fullName>Account_Built_Alert_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Built Alert Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Built_Date__c</fullName>
        <label>Account Built Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Built__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Built</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sign Ups</relationshipLabel>
        <relationshipName>Sign_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Days__c</fullName>
        <formula>Account__r.Active_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ad_Position__c</fullName>
        <description>Adwords Stats - 7 days after signup completion</description>
        <inlineHelpText>Adwords Stats - 7 days after signup completion</inlineHelpText>
        <label>Ad Position</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ads_have_what_they_do_selling_point_CTA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ads have what they do,selling point, CTA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adwords_Acc_Activity__c</fullName>
        <label>Adwords Acc Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adwords_Email__c</fullName>
        <description>Email address belongs to Adwords account linked to this signup</description>
        <label>Adwords Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Adwords_ID__c</fullName>
        <description>The ID of Adwords account linked with this signup.
ID format: xxx-xxx-xxxx</description>
        <label>Adwords ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_all_possible_extensions_setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are all possible extensions setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_the_ads_set_to_rotate_evenly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are the ads set to rotate evenly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_To_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sign_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_to_Team__c</fullName>
        <label>Assign to Team</label>
        <picklist>
            <picklistValues>
                <fullName>Team A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT Team A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMT Team B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BJB_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the company which manages this account</description>
        <inlineHelpText>the company which manages this account</inlineHelpText>
        <label>BJB Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Sign Ups</relationshipLabel>
        <relationshipName>Sign_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Build_Checked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build Checked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sign_Ups2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Build_Checked_Date__c</fullName>
        <label>Build Checked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPC__c</fullName>
        <description>Adwords Stats - 7 days after signup completion</description>
        <inlineHelpText>Adwords Stats - 7 days after signup completion</inlineHelpText>
        <label>CPC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CTR__c</fullName>
        <description>Adwords Stats - 7days after signup completion</description>
        <label>CTR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cart_SF__c</fullName>
        <description>Salesforce cart data</description>
        <label>Cart SF</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cart_Signature__c</fullName>
        <label>Cart Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart__c</fullName>
        <label>Cart</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_SQR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check SQR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clicks__c</fullName>
        <description>Adwords Stats - 7 days after signup completion</description>
        <label>Clicks</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Called_by_TL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Called by TL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed_Datetime__c</fullName>
        <label>Completed Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contacted_By__c</fullName>
        <label>Setup Checked By</label>
        <picklist>
            <picklistValues>
                <fullName>Ryan Goldsworthy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Powell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramsay Pontin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sam Fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sumeet Bhindi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <description>Adwords Stats - 7days after signup completion</description>
        <inlineHelpText>Adwords Stats - 7days after signup completion</inlineHelpText>
        <label>Conversion Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conversions__c</fullName>
        <description>Adwords Stats - 7days after signup completion</description>
        <label>Conversions</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Budget__c</fullName>
        <label>Daily Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <label>Date Assigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <formula>CASE( MOD( Completed_Date__c - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, 
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of the Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Account_Name__c</fullName>
        <label>Direct Debit Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Temp__c</fullName>
        <label>Email Temp</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Firstname__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromSource__c</fullName>
        <label>From Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Source__c</fullName>
        <label>From Source</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Referred A Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex-Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects List Immediate HC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects List HC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winback Campaign</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this customer registered for GST?</description>
        <label>GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_GTM_code_been_sent_to_client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has GTM code been sent to client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_negative_keywords_been_added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have negative keywords been added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPAddress__c</fullName>
        <label>Sign Up IP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impressions__c</fullName>
        <description>Adwords Stats -7 days impressions after signup</description>
        <inlineHelpText>Adwords Stats -7 days impressions after signup</inlineHelpText>
        <label>Impressions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoiceno__c</fullName>
        <label>Invoice Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Addon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this an addon signup?</description>
        <label>Is Addon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pricing_Correct__c</fullName>
        <label>Is Pricing Correct</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Setup_Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Setup Task Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_conversion_tracking_setup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is conversion tracking setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_location_targeting_correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is location targeting correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_targeting_correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is targeting correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_correct_type_of_campaign_set_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the correct type of campaign set up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_2_ads_adgroup_for_split_testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is there 2 ads/adgroup for split testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords_separated_into_correct_adgroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keywords separated into correct adgroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lastname__c</fullName>
        <label>Lastname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>MailingCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>MailingPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>MailingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>MailingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Management_Price__c</fullName>
        <description>Management product price from sign up</description>
        <label>Management Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>No_Adwords_Change__c</fullName>
        <formula>IF( Adwords_Acc_Activity__c &lt;=3,1,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Adwords Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Note Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sign Ups</relationshipLabel>
        <relationshipName>Sign_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Attempt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Attempt</label>
        <referenceTo>Payment_Attempt__c</referenceTo>
        <relationshipLabel>Sign Ups</relationshipLabel>
        <relationshipName>Sign_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Company__c</fullName>
        <label>Product Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Package__c</fullName>
        <label>Product Package</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>AdWords Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admob Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConvertoPages</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promocode</label>
        <referenceTo>Promocode__c</referenceTo>
        <relationshipLabel>Sign Ups</relationshipLabel>
        <relationshipName>Sign_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sign Ups (Salesperson)</relationshipLabel>
        <relationshipName>Sign_Ups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Set_Up_Price__c</fullName>
        <description>Set up product price during sign up</description>
        <label>Set Up Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Setup_Checked_Date__c</fullName>
        <label>Setup Checked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Setup_Date__c</fullName>
        <label>Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signup_Checked_In_Xero__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signup Checked In Xero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signup_Date__c</fullName>
        <label>Signup Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sold_to_Pause_Date__c</fullName>
        <label>Sold to Pause Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spotcheck_Completed_By__c</fullName>
        <label>Spotcheck Completed By</label>
        <picklist>
            <picklistValues>
                <fullName>Sharene Moses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Powell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carla Mayne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramsay Pontin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sam Fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amy Poole</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spotcheck_Completed_Date__c</fullName>
        <label>Spotcheck Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spotchecked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spotchecked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sign_Ups1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending 1st Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending CM Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold to Pause</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TL_Note__c</fullName>
        <label>TL Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sign_Ups3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>Adwords Stats - 7 days after signup completion</description>
        <inlineHelpText>Adwords Stats - 7 days after signup completion</inlineHelpText>
        <label>Total Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_keywords_bring_in_the_right_traffic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Will keywords bring in the right traffic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Xero_Invoices_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Xero Invoices Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Xero_Payment_Response__c</fullName>
        <label>Xero Payment Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sign Up</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Signup_Date__c</columns>
        <columns>Product_Type__c</columns>
        <columns>NAME</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Status__c</columns>
        <columns>Salesperson__c</columns>
        <columns>Promocode__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>Adwords_SEO_Client_Manger</role>
            <role>BJBDigitalWebManager</role>
            <role>BJBGlobalAccountsAdmin</role>
            <role>BJBGlobalCEO</role>
            <role>SLXAusClientOperationsManager</role>
            <role>SLXAusHumanResourcesManager</role>
            <role>SLXAusWebProjectManager</role>
            <role>SLXSalesManager</role>
            <role>SLX_Aus_Marketing_Manager</role>
            <role>SLX_Aus_SEO_Team_A_Account_Manager</role>
            <role>SLX_Aus_SEO_Team_A_Manager</role>
            <role>Sales_Manager_Assistant_Digital_Strategy</role>
            <role>Sales_Manager_Assistant_GMT</role>
            <role>Sales_Manager_Assistant_SLX</role>
            <roleAndSubordinates>SLXAusClientOperationsManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Assign_to_Team__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Form_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Completed</value>
        </filters>
        <label>Completed</label>
        <sharedTo>
            <role>BJBGlobalAccountsAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GMT_New_Sales_awaiting_approval</fullName>
        <columns>Signup_Date__c</columns>
        <columns>NAME</columns>
        <columns>Daily_Budget__c</columns>
        <columns>Account__c</columns>
        <columns>Product_Package__c</columns>
        <columns>Set_Up_Price__c</columns>
        <columns>Salesperson__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>contains</operation>
            <value>adwords</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>getmoretraffic</value>
        </filters>
        <label>GMT New Sales awaiting approval</label>
    </listViews>
    <listViews>
        <fullName>GMT_Sign_Ups</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Assign_To_User__c</columns>
        <columns>Sold_to_Pause_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Assign_to_Team__c</columns>
        <columns>Daily_Budget__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Industry__c</columns>
        <columns>Salesperson__c</columns>
        <columns>Setup_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Pending CM Call,On Hold,Sold to Pause,Pending 1st Call</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>equals</operation>
            <value>AdWords Management,Social Marketing</value>
        </filters>
        <filters>
            <field>FromSource__c</field>
            <operation>contains</operation>
            <value>getmoretraffic</value>
        </filters>
        <label>*** GMT Sign Ups</label>
        <sharedTo>
            <role>Client_Manager_GMT_Team_A_Leader</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GetMoreTraffic</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Website__c</columns>
        <columns>Salesperson__c</columns>
        <columns>Promocode__c</columns>
        <columns>Status__c</columns>
        <columns>IPAddress__c</columns>
        <columns>Assign_to_Team__c</columns>
        <columns>Assign_To_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>getmoretraffic</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>GetMoreTraffic this week</label>
        <sharedTo>
            <roleAndSubordinates>BJBGlobalAccountsAdmin</roleAndSubordinates>
            <roleAndSubordinates>Client_Manager_Team_A_Leader</roleAndSubordinates>
            <roleAndSubordinates>Client_Manager_Team_A_Member</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Week_Signup_From_Checkout</fullName>
        <columns>Product_Type__c</columns>
        <columns>NAME</columns>
        <columns>Management_Price__c</columns>
        <columns>Account__c</columns>
        <columns>Promocode__c</columns>
        <columns>Salesperson__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>IPAddress__c</columns>
        <columns>Invoiceno__c</columns>
        <columns>BJB_Company__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Note_Created__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Last Week Signup</label>
    </listViews>
    <listViews>
        <fullName>NEWOWNER_Sign_Ups</fullName>
        <columns>Product_Type__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>BJB_Company__c</columns>
        <columns>Status__c</columns>
        <columns>Salesperson__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Daily_Budget__c</columns>
        <columns>Promocode__c</columns>
        <columns>Assign_to_Team__c</columns>
        <columns>Set_Up_Price__c</columns>
        <columns>Management_Price__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Invoice_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Promocode__c</field>
            <operation>equals</operation>
            <value>NEWOWNER</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Pending 1st Call,Pending CM Call,On Hold,Approved Sale,Sold to Pause</value>
        </filters>
        <label>NEWOWNER Sign Ups</label>
        <sharedTo>
            <group>Amber_Porter</group>
            <role>SLXAusClientOperationsManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Sign_Up_Queue_Sign_Up</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Salesperson__c</columns>
        <columns>Set_Up_Price__c</columns>
        <columns>Status__c</columns>
        <columns>Daily_Budget__c</columns>
        <columns>Product_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>new</value>
        </filters>
        <filters>
            <field>Product_Type__c</field>
            <operation>notContain</operation>
            <value>seo,convertopages,google+</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>getmoretraffic</value>
        </filters>
        <label>SLX Sign Up Awaiting Approval</label>
        <sharedTo>
            <role>SLXSales</role>
        </sharedTo>
    </listViews>
</CustomObject>